fix: align FooterNav with detroit updates (#66)

--- a/src/navigation/FooterNav.scss
+++ b/src/navigation/FooterNav.scss
@@ -1,5 +1,8 @@
 .footer-sock {
-  @apply bg-gray-900;
+  --background-color: var(--bloom-color-gray-900);
+  --copyright-text-color: var(--bloom-color-gray-500);
+
+  background-color: var(--background-color);
   @apply py-8;
   @apply px-2;
 
@@ -29,9 +32,11 @@
   }
 
   .footer-copyright {
+    color: var(--copyright-text-color);
     width: auto;
     flex-shrink: 0;
     @screen lg {
+      @apply w-full;
       @apply text-left;
     }
   }
